--- a/Default.html
+++ b/Default.html
@@ -3,9 +3,9 @@
 <head>
   <title>HTML Table Samples</title>
   <link href="Content/bootstrap.css" rel="stylesheet" />
-  
-  <script src="Scripts/jquery-1.11.0.min.js"></script>
-  <script src="Scripts/bootstrap.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/gh/bewinsto7604/custom-html-table/Scripts/jquery-1.11.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/bewinsto7604/custom-html-table/Scripts/bootstrap.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -13,11 +13,11 @@
       <div class="col-md-6">
         <div class="list-group">
           <h1>Work with HTML Table</h1>
-          <a class="list-group-item" href="Samples-Table/TableSample1.html">Add Row to Table (Hard-Coded)</a>
-          <a class="list-group-item" href="Samples-Table/TableSample2.html">Add Row to Table</a>
-          <a class="list-group-item" href="Samples-Table/TableSample3.html">Delete Row from Table</a>
-          <a class="list-group-item" href="Samples-Table/TableSample4.html">Edit Row in Table</a>
-          <a class="list-group-item" href="Samples-Table/TableSample5.html">Edit Row in Table using an ID</a>
+          <a class="list-group-item" href="https://cdn.jsdelivr.net/gh/bewinsto7604/custom-html-table/Samples-Table/TableSample1.html">Add Row to Table (Hard-Coded)</a>
+          <a class="list-group-item" href="https://cdn.jsdelivr.net/gh/bewinsto7604/custom-html-table/Samples-Table/TableSample2.html">Add Row to Table</a>
+          <a class="list-group-item" href="https://cdn.jsdelivr.net/gh/bewinsto7604/custom-html-table/Samples-Table/TableSample3.html">Delete Row from Table</a>
+          <a class="list-group-item" href="https://cdn.jsdelivr.net/gh/bewinsto7604/custom-html-table/Samples-Table/TableSample4.html">Edit Row in Table</a>
+          <a class="list-group-item" href="https://cdn.jsdelivr.net/gh/bewinsto7604/custom-html-table/Samples-Table/TableSample5.html">Edit Row in Table using an ID</a>
         </div>
       </div>
     </div>
