--- a/Samples-Table/TableSample3.html
+++ b/Samples-Table/TableSample3.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Paul's Training Videos</title>
-  <link href="../Content/bootstrap.css" rel="stylesheet" />
-  
-  <script src="../Scripts/jquery-1.11.0.min.js"></script>
-  <script src="../Scripts/bootstrap.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/gh/bewinsto7604/custom-html-table/Content/bootstrap.css" rel="stylesheet" />
+
+  <script src="https://cdn.jsdelivr.net/gh/bewinsto7604/custom-html-table/Scripts/jquery-1.11.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/bewinsto7604/custom-html-table/Scripts/bootstrap.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
       <div class="col-sm-6">
-        <table id="productTable" 
+        <table id="productTable"
                class="table table-bordered table-condensed table-striped">
           <thead>
             <tr>
